--- a/assets/admin/pages/css-custom/login-custom.css
+++ b/assets/admin/pages/css-custom/login-custom.css
@@ -7,6 +7,6 @@
   .content {
     /* margin-top: 120px !important; */
     /* top: 50%; */
-    transform: translate(0,50%);
+    transform: translate(0,120px);
   
   }
